Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108837

Keyboard input doesn't work

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.5.0
    • 6.4.1
    • Qt Application Manager
    • None
    • Linux/Wayland
    • a7d4f5324 (dev)

    Description

      When the System UI sets the keyboard focus to a WindowItem, key events won't get to the actual application represented by this WindowItem. The reason is that a WindowItem is the parent of the actual application's (surface) item (QWaylandQuickItem in MP and InProcessSurfaceItem in SP) and key events are, of course not forwarded to children. Hence, the focus or key events should explicitly be forwarded from WindowItem to the application's (surface) item.

      Attachments

        For Gerrit Dashboard: QTBUG-108837
        # Subject Branch Project Status CR V

        Activity

          People

            rgriebl Robert Griebl
            bweimer Bernd Weimer
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes